# verifiable-share-encryption

./: .gitignore  Cargo.toml  README.md
docs/: math.md
src/: byte_proof.rs  ciphertext.rs  decryption_share.rs  dlog_proof.rs  errors.rs  lib.rs  proof.rs  serdes.rs  v1.rs
src/v1/: byte_proof.rs  ciphertext.rs  decryption_share.rs  dlog_proof.rs  proof.rs
