[package]
name = "verifiable-share-encryption"
version = "0.3.0"
edition = "2021"

[features]
default = ["v1"]
v1 = []

[dependencies.bulletproofs]
default-features = false
features = [
    "std",
    "ristretto25519",
    "ed25519",
    "k256",
    "p256",
    "p384",
    "bls12_381",
    "bls12_381_std",
    "ed448",
    "jubjub",
    "decaf377",
]
git = "https://github.com/LIT-Protocol/bulletproofs.git"
rev = "a71cebebd0f1cf2364cefaf2e35ff15c94132427"

[dependencies]
anyhow = "1.0"
data-encoding = "2.6"
elliptic-curve-tools = "0.1.2"
legacy-vsss-rs = { version = "4.3.8", features = ["std"],  package = "vsss-rs"}
rayon = "1.10"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
rand = "0.8"
rstest = "0.23"
serde_bare = "0.5"
serde_json = "1.0"
