[package]
name = "verifiable-share-encryption"
version = "0.3.0"
edition = "2021"

[features]
default = ["v1"]
v1 = []

[dependencies.bulletproofs]
default-features = false
features = [
    "std",
    "ristretto25519",
    "ed25519",
    "k256",
    "p256",
    "p384",
    "bls12_381",
    "bls12_381_std",
    "ed448",
    "jubjub",
    "decaf377",
]
git = "https://github.com/LIT-Protocol/bulletproofs.git"
rev = "ddf11c2f593e71f24c9a3d64c56f62d82f2b5099"

[dependencies]
anyhow = "1.0"
data-encoding = "2.6"
elliptic-curve-tools = "0.1.2"
legacy-vsss-rs = { version = "4.3.8", features = ["std"],  package = "vsss-rs"}
rayon = "1.10"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3.1"
rstest = "0.23"
serde_bare = "0.5"
serde_json = "1.0"
